Changed path to images

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
           <div class="container header-up__container">
             <div class="header-up__left">
               <div class="header-email">
-                <img src="/imgs/post.svg" alt="post picture" class="email-pic">
+                <img src="./imgs/post.svg" alt="post picture" class="email-pic">
                 mhhasanul@gmail.com
               </div>
               <div class="header-tel">
-                <img src="/imgs/tel.svg" alt="telephone picture" class="tel-pic">
+                <img src="./imgs/tel.svg" alt="telephone picture" class="tel-pic">
                 (12345)67890
               </div>
             </div>
@@ -35,30 +35,30 @@
               <li>
                 <button class="header-button">
                   <div class="header-button__text">English</div>
-                  <img src="/imgs/arrow.svg" alt="" class="arrow">
+                  <img src="./imgs/arrow.svg" alt="" class="arrow">
                 </button>
               </li>
               <li>
                 <button class="header-button">
                   <div class="header-button__text">USD</div>
-                  <img src="/imgs/arrow.svg" alt="" class="arrow">
+                  <img src="./imgs/arrow.svg" alt="" class="arrow">
                 </button>
               </li>
               <li>
                 <button class="header-button">
                   <div class="header-button__text">Login</div>
-                  <img src="/imgs/user.svg" alt="" class="user">
+                  <img src="./imgs/user.svg" alt="" class="user">
                 </button>
               </li>
               <li>
                 <button class="header-button">
                   <div class="header-button__text">WishList</div>
-                  <img src="/imgs/heart.svg" alt="" class="heart">
+                  <img src="./imgs/heart.svg" alt="" class="heart">
                 </button>
               </li>
               <li>
                 <button class="header-button header-button__last">
-                  <img src="/imgs/basket.svg" alt="" class="basket">
+                  <img src="./imgs/basket.svg" alt="" class="basket">
                 </button>
               </li>
             </ul>
@@ -72,7 +72,7 @@
                 <li>
                   <a class="header-link header-link__red">
                     Home
-                    <img src="/imgs/arrow-red.svg" alt="" class="arrow">
+                    <img src="./imgs/arrow-red.svg" alt="" class="arrow">
                   </a>
                 </li>
                 <li><a class="header-link" href="grid.html">Pages</a></li>
@@ -92,9 +92,9 @@
         </div>
       </header>
       <section class="home-title">
-        <img src="/imgs/lamp.svg" alt="" class="home-title__lamp">
-        <img src="/imgs/sofa-header.png" alt="" class="home-title__sofa">
-        <img src="/imgs/sale.svg" alt="" class="home-title__sale">
+        <img src="./imgs/lamp.svg" alt="" class="home-title__lamp">
+        <img src="./imgs/sofa-header.png" alt="" class="home-title__sofa">
+        <img src="./imgs/sale.svg" alt="" class="home-title__sale">
         <div class="container home-title__container">
           <div class="home-title__pre-title">Best Furniture For Your Castle....</div>
           <h1 class="home-title__title">New Furniture Collection
@@ -116,7 +116,7 @@
                 <!-- Slides -->
                 <div class="swiper-slide">
                   <div class="swiper-slide__image">
-                    <img src="/imgs/chair-1.svg" alt="Chair" class="">
+                    <img src="./imgs/chair-1.svg" alt="Chair" class="">
                   </div>
                   <div class="swiper-slide__description">
                     <h6 class="swiper-slide__title"><a href="product.html">Cantilever chair</a></h6>
@@ -131,7 +131,7 @@
                 </div>
                 <div class="swiper-slide">
                   <div class="swiper-slide__image">
-                    <img src="/imgs/chair-2.svg" alt="Chair" class="">
+                    <img src="./imgs/chair-2.svg" alt="Chair" class="">
                   </div>
                   <div class="swiper-slide__description">
                     <h6 class="swiper-slide__title"><a href="product.html">Cantilever chair</a></h6>
@@ -146,7 +146,7 @@
                 </div>
                 <div class="swiper-slide">
                   <div class="swiper-slide__image">
-                    <img src="/imgs/chair-3.svg" alt="Chair" class="">
+                    <img src="./imgs/chair-3.svg" alt="Chair" class="">
                   </div>
                   <div class="swiper-slide__description">
                     <h6 class="swiper-slide__title"><a href="product.html">Cantilever chair</a></h6>
@@ -161,7 +161,7 @@
                 </div>
                 <div class="swiper-slide">
                   <div class="swiper-slide__image">
-                    <img src="/imgs/chair-4.svg" alt="Chair" class="">
+                    <img src="./imgs/chair-4.svg" alt="Chair" class="">
                   </div>
                   <div class="swiper-slide__description">
                     <h6 class="swiper-slide__title"><a href="product.html">Cantilever chair</a></h6>
@@ -193,7 +193,7 @@
           <div class="leatest-products__grid">
             <div class="leatest-products__card">
               <div class="leatest-products__card-image">
-                <img src="/imgs/sofa-1.svg" alt="Chair" class="">
+                <img src="./imgs/sofa-1.svg" alt="Chair" class="">
               </div>
               <div class="leatest-products__card-down">
                 <div class="leatest-products__line"></div>
@@ -206,7 +206,7 @@
             </div>
             <div class="leatest-products__card">
               <div class="leatest-products__card-image" style="background: none">
-                <img src="/imgs/sofa-2.svg" alt="Sofa" class="">
+                <img src="./imgs/sofa-2.svg" alt="Sofa" class="">
               </div>
               <div class="leatest-products__card-down">
                 <div class="leatest-products__line"></div>
@@ -219,7 +219,7 @@
             </div>
             <div class="leatest-products__card">
               <div class="leatest-products__card-image">
-                <img src="/imgs/sofa-3.svg" alt="Sofa" class="">
+                <img src="./imgs/sofa-3.svg" alt="Sofa" class="">
               </div>
               <div class="leatest-products__card-down">
                 <div class="leatest-products__line"></div>
@@ -232,7 +232,7 @@
             </div>
             <div class="leatest-products__card">
               <div class="leatest-products__card-image">
-                <img src="/imgs/sofa-4.svg" alt="Sofa" class="">
+                <img src="./imgs/sofa-4.svg" alt="Sofa" class="">
               </div>
               <div class="leatest-products__card-down">
                 <div class="leatest-products__line"></div>
@@ -245,7 +245,7 @@
             </div>
             <div class="leatest-products__card">
               <div class="leatest-products__card-image">
-                <img src="/imgs/sofa-5.svg" alt="Sofa" class="">
+                <img src="./imgs/sofa-5.svg" alt="Sofa" class="">
               </div>
               <div class="leatest-products__card-down">
                 <span class="leatest-products__card-name">Comfort Handy Craft</span>
@@ -258,7 +258,7 @@
             </div>
             <div class="leatest-products__card">
               <div class="leatest-products__card-image">
-                <img src="/imgs/sofa-6.svg" alt="Sofa" class="">
+                <img src="./imgs/sofa-6.svg" alt="Sofa" class="">
               </div>
               <div class="leatest-products__card-down">
                 <div class="leatest-products__line"></div>
@@ -278,7 +278,7 @@
           <div class="offer__cards">
             <div class="offer__card">
               <div class="offer__card-image">
-                <img src="/imgs/free-delivery.svg" alt="">
+                <img src="./imgs/free-delivery.svg" alt="">
               </div>
               <div class="offer__card-title">24/7 Support</div>
               <div class="offer__card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa purus
@@ -286,7 +286,7 @@
             </div>
             <div class="offer__card">
               <div class="offer__card-image">
-                <img src="/imgs/cashback.svg" alt="">
+                <img src="./imgs/cashback.svg" alt="">
               </div>
               <div class="offer__card-title">24/7 Support</div>
               <div class="offer__card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa purus
@@ -294,7 +294,7 @@
             </div>
             <div class="offer__card">
               <div class="offer__card-image">
-                <img src="/imgs/premium-quality.svg" alt="">
+                <img src="./imgs/premium-quality.svg" alt="">
               </div>
               <div class="offer__card-title">24/7 Support</div>
               <div class="offer__card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa purus
@@ -302,7 +302,7 @@
             </div>
             <div class="offer__card">
               <div class="offer__card-image">
-                <img src="/imgs/24-hours-support.svg" alt="">
+                <img src="./imgs/24-hours-support.svg" alt="">
               </div>
               <div class="offer__card-title">24/7 Support</div>
               <div class="offer__card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Massa purus
@@ -313,7 +313,7 @@
       <section class="unique-features">
         <div class="container unique-features__container">
           <div class="unique-features__img">
-            <img src="/imgs/sofa-unique.png" alt="">
+            <img src="./imgs/sofa-unique.png" alt="">
           </div>
           <div class="unique-features__content">
             <h3 class="unique-features__title title">Unique Features Of leatest &
@@ -346,7 +346,7 @@
           <div class="trending-products__up">
             <div class="trending-products__chair">
               <div class="trending-products__chair-image">
-                <img src="/imgs/trend-chair-1.png" alt="" class="">
+                <img src="./imgs/trend-chair-1.png" alt="" class="">
               </div>
               <div class="trending-products__name">Cantilever chair</div>
               <div class="trending-products__price">
@@ -356,7 +356,7 @@
             </div>
             <div class="trending-products__chair">
               <div class="trending-products__chair-image">
-                <img src="/imgs/trend-chair-2.png" alt="" class="">
+                <img src="./imgs/trend-chair-2.png" alt="" class="">
               </div>
               <div class="trending-products__name">Cantilever chair</div>
               <div class="trending-products__price">
@@ -366,7 +366,7 @@
             </div>
             <div class="trending-products__chair">
               <div class="trending-products__chair-image">
-                <img src="/imgs/trend-chair-3.png" alt="" class="">
+                <img src="./imgs/trend-chair-3.png" alt="" class="">
               </div>
               <div class="trending-products__name">Cantilever chair</div>
               <div class="trending-products__price">
@@ -376,7 +376,7 @@
             </div>
             <div class="trending-products__chair">
               <div class="trending-products__chair-image">
-                <img src="/imgs/trend-chair-4.png" alt="" class="">
+                <img src="./imgs/trend-chair-4.png" alt="" class="">
               </div>
               <div class="trending-products__name">Cantilever chair</div>
               <div class="trending-products__price">
@@ -391,7 +391,7 @@
               <div class="trending-products__sale-down">
                 <a class="trending-products__shop">Shop Now</a>
                 <div class="trending-products__img">
-                  <img src="/imgs/clock.png" alt="">
+                  <img src="./imgs/clock.png" alt="">
                 </div>
               </div>
             </div>
@@ -400,14 +400,14 @@
               <div class="trending-products__sale-down">
                 <a class="trending-products__shop">View Collection</a>
                 <div class="trending-products__img">
-                  <img src="/imgs/wardrobe.png" alt="">
+                  <img src="./imgs/wardrobe.png" alt="">
                 </div>
               </div>
             </div>
             <div class="trending-products__list">
               <div class="trending-products__li">
                 <div class="trending-products__chair-image trending-products__chair-image--down">
-                  <img src="/imgs/trend-chair-5.png" alt="" class="">
+                  <img src="./imgs/trend-chair-5.png" alt="" class="">
                 </div>
                 <div class="trending-products__li--right">
                   <div class="trending-products__name trending-products__name--right">Executive Seat chair</div>
@@ -416,7 +416,7 @@
               </div>
               <div class="trending-products__li">
                 <div class="trending-products__chair-image trending-products__chair-image--down">
-                  <img src="/imgs/trend-chair-6.png" alt="" class="">
+                  <img src="./imgs/trend-chair-6.png" alt="" class="">
                 </div>
                 <div class="trending-products__li--right">
                   <div class="trending-products__name trending-products__name--right">Executive Seat chair</div>
@@ -425,7 +425,7 @@
               </div>
               <div class="trending-products__li">
                 <div class="trending-products__chair-image trending-products__chair-image--down">
-                  <img src="/imgs/trend-chair-7.png" alt="" class="">
+                  <img src="./imgs/trend-chair-7.png" alt="" class="">
                 </div>
                 <div class="trending-products__li--right">
                   <div class="trending-products__name trending-products__name--right">Executive Seat chair</div>
@@ -460,7 +460,7 @@
               <div class="home-title__button discount-item__button">Shop Now</div>
             </div>
             <div class="discount-item__image">
-              <img src="/imgs/discount-sofa.png" alt="">
+              <img src="./imgs/discount-sofa.png" alt="">
             </div>
           </div>
         </div>
@@ -475,7 +475,7 @@
               <!-- Slides -->
               <div class="swiper-slide swiper-slide--top">
                 <div class="swiper-slide__image swiper-slide__image--top">
-                  <img src="/imgs/top-chair-1.png" alt="Chair" class="">
+                  <img src="./imgs/top-chair-1.png" alt="Chair" class="">
                 </div>
                 <div class="swiper-slide__description">
                   <h6 class="swiper-slide__title swiper-slide__title--top">Mini LCW Chair</h6>
@@ -484,7 +484,7 @@
               </div>
               <div class="swiper-slide swiper-slide--top">
                 <div class="swiper-slide__image swiper-slide__image--top">
-                  <img src="/imgs/top-chair-2.png" alt="Chair" class="">
+                  <img src="./imgs/top-chair-2.png" alt="Chair" class="">
                 </div>
                 <div class="swiper-slide__description">
                   <h6 class="swiper-slide__title swiper-slide__title--top">Mini LCW Chair</h6>
@@ -493,7 +493,7 @@
               </div>
               <div class="swiper-slide swiper-slide--top">
                 <div class="swiper-slide__image swiper-slide__image--top">
-                  <img src="/imgs/top-chair-3.png" alt="Chair" class="">
+                  <img src="./imgs/top-chair-3.png" alt="Chair" class="">
                 </div>
                 <div class="swiper-slide__description">
                   <h6 class="swiper-slide__title swiper-slide__title--top">Mini LCW Chair</h6>
@@ -502,7 +502,7 @@
               </div>
               <div class="swiper-slide swiper-slide--top">
                 <div class="swiper-slide__image swiper-slide__image--top">
-                  <img src="/imgs/top-chair-4.png" alt="Chair" class="">
+                  <img src="./imgs/top-chair-4.png" alt="Chair" class="">
                 </div>
                 <div class="swiper-slide__description">
                   <h6 class="swiper-slide__title swiper-slide__title--top">Mini LCW Chair</h6>
@@ -533,7 +533,7 @@
           <div class="leatest-blog__cards">
             <div class="leatest-blog__card">
               <div class="leatest-blog__img">
-                <img src="/imgs/home-1.png" alt="">
+                <img src="./imgs/home-1.png" alt="">
                 <div class="leatest-blog__img-description">
                   <div class="leatest-blog__write">SaberAli</div>
                   <div class="leatest-blog__date">21 August,2020</div>
@@ -548,7 +548,7 @@
             </div>
             <div class="leatest-blog__card">
               <div class="leatest-blog__img">
-                <img src="/imgs/home-2.png" alt="">
+                <img src="./imgs/home-2.png" alt="">
                 <div class="leatest-blog__img-description">
                   <div class="leatest-blog__write">Surfauxion</div>
                   <div class="leatest-blog__date">21 August,2020</div>
@@ -563,7 +563,7 @@
             </div>
             <div class="leatest-blog__card">
               <div class="leatest-blog__img">
-                <img src="/imgs/home-3.png" alt="">
+                <img src="./imgs/home-3.png" alt="">
                 <div class="leatest-blog__img-description">
                   <div class="leatest-blog__write">SaberAli</div>
                   <div class="leatest-blog__date">21 August,2020</div>
