--- a/product.html
+++ b/product.html
@@ -23,12 +23,12 @@
         <div class="container header-up__container">
           <div class="header-up__left">
             <div class="header-email">
-              <img src="/imgs/post.svg" alt="post picture" class="email-pic" />
+              <img src="./imgs/post.svg" alt="post picture" class="email-pic" />
               mhhasanul@gmail.com
             </div>
             <div class="header-tel">
               <img
-                src="/imgs/tel.svg"
+                src="./imgs/tel.svg"
                 alt="telephone picture"
                 class="tel-pic"
               />
@@ -39,30 +39,30 @@
             <li>
               <button class="header-button">
                 <div class="header-button__text">English</div>
-                <img src="/imgs/arrow.svg" alt="" class="arrow" />
+                <img src="./imgs/arrow.svg" alt="" class="arrow" />
               </button>
             </li>
             <li>
               <button class="header-button">
                 <div class="header-button__text">USD</div>
-                <img src="/imgs/arrow.svg" alt="" class="arrow" />
+                <img src="./imgs/arrow.svg" alt="" class="arrow" />
               </button>
             </li>
             <li>
               <button class="header-button">
                 <div class="header-button__text">Login</div>
-                <img src="/imgs/user.svg" alt="" class="user" />
+                <img src="./imgs/user.svg" alt="" class="user" />
               </button>
             </li>
             <li>
               <button class="header-button">
                 <div class="header-button__text">WishList</div>
-                <img src="/imgs/heart.svg" alt="" class="heart" />
+                <img src="./imgs/heart.svg" alt="" class="heart" />
               </button>
             </li>
             <li>
               <button class="header-button header-button__last">
-                <img src="/imgs/basket.svg" alt="" class="basket" />
+                <img src="./imgs/basket.svg" alt="" class="basket" />
               </button>
             </li>
           </ul>
@@ -76,7 +76,7 @@
               <li>
                 <a class="header-link header-link__red" href="index.html">
                   Home
-                  <img src="/imgs/arrow-red.svg" alt="" class="arrow" />
+                  <img src="./imgs/arrow-red.svg" alt="" class="arrow" />
                 </a>
               </li>
               <li><a class="header-link" href="grid.html">Pages</a></li>
