--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
 
     gtag('config', 'G-LR2M2S4K3B');
   </script>
+  <script>
+    function getCookie(name) {
+      var matches = document.cookie.match(new RegExp("(?:^|; )" + name.replace(/([\.$?*|{}\(\)\[\]\\\/\+^])/g, '\\$1') + "=([^;]*)"));
+      return matches ? decodeURIComponent(matches[1]) : undefined;
+    }
+
+    console.log(getCookie('_ga'));
+  </script>
 </head>
 
 <body>
