add: getPosition function
to send clicks to DB

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-LR2M2S4K3B"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'G-LR2M2S4K3B');
@@ -670,6 +670,11 @@
   <!-- swiper -->
   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
   <script src="js/swiper.js"></script>
+  <!-- Scripts for heatmap -->
+  <!-- <script src="node_modules/heatmap.js/build/heatmap.js"></script>
+  <script src="js/heatmap.js"></script> -->
+  <!-- Script for storage of clicks -->
+  <script src="js/getPosition.js"></script>
 </body>
 
 </html>
